Fix vertical alignment rendering within column block in editor
[MAILPOET-2609]

--- a/assets/css/src/components/formEditor/components/_block_editor.scss
+++ b/assets/css/src/components/formEditor/components/_block_editor.scss
@@ -15,3 +15,12 @@
 .block-editor-editor-skeleton__body {
   overflow: hidden;
 }
+
+// Alignment rendering in columns block seems to have some issues
+// e.g. https://github.com/WordPress/gutenberg/issues/19962
+// This is fix so that nested columns are rendered with correct width
+.wp-block-column.is-vertically-aligned-top,
+.wp-block-column.is-vertically-aligned-center,
+.wp-block-column.is-vertically-aligned-bottom {
+  align-self: auto;
+}
